retrive/objects/Ifirma_Invoice_Settings__mdt.object
<CustomObject>
	<fields>
        <fullName>PrefiksUE__c</fullName>
        <label>PrefiksUE</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Person__c</fullName>
        <label>Authorized Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Names__c</fullName>
        <label>Country Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Type__c</fullName>
        <label>Currency Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Value__c</fullName>
        <label>Currency Value</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Place_Of_Creation__c</fullName>
        <label>Place Of Creation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ifirma Invoice Settings</label>
    <pluralLabel>Ifirma Invoice Settings</pluralLabel>
</CustomObject>